--- a/indexcards-ui/src/styles.css
+++ b/indexcards-ui/src/styles.css
@@ -1,1 +1,34 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+
+html {
+    font-family: 'Montserrat', sans-serif;
+    background: #282828;
+    color: white;
+    width: 100%;
+    
+}
+app-root {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0; 
+    width: 100%;
+}
+
+.center{
+    display: flex;
+    justify-content: center;
+}
+
+button {
+    font-family: 'Montserrat', sans-serif;
+    padding: 4px;
+    font-size: larger;
+    background-color: transparent;
+    border-radius: 5px;
+    border: 2px solid #3500D3;
+    color: white;
+}
