--- a/indexcards-ui/src/styles.css
+++ b/indexcards-ui/src/styles.css
@@ -32,3 +32,45 @@ button {
     border: 2px solid #3500D3;
     color: white;
 }
+
+form {
+    text-align: center;
+    position: relative;
+    margin-top: 30px;
+}
+
+input {
+    padding: 15px;
+    border-radius: 5px;
+    border: 3px solid #3500D3;
+    margin-bottom: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    font-family: montserrat, serif;
+    color: #240090;
+    font-size: larger;
+}
+
+label {
+    font-size: larger;
+    float: left;
+    padding-bottom: 10px;
+}
+
+.container {
+    background: #190061;
+    border: 0 none;
+    border-radius: 20px;
+    padding: 20px 30px;
+    box-sizing: border-box;
+    width: 80%;
+    margin: 0 10%;
+
+    /*stacking fieldsets above each other*/
+    position: relative;
+}
+
+.error {
+    font-size: x-large;
+    color: #ff008d;
+}
