--- a/indexcards-ui/src/app/header/header.component.css
+++ b/indexcards-ui/src/app/header/header.component.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #0C0032;
+    background-color: #1D3557;
     padding: 60px;
     display: flex;
     justify-content: space-between;
