Authentication Frontend with notifications

--- a/indexcards-ui/src/app/component/auth/login/login.component.html
+++ b/indexcards-ui/src/app/component/auth/login/login.component.html
@@ -17,6 +17,9 @@
         <div *ngIf="error" class="error">
             {{error}}
         </div>
+        <p>
+          Don't have an Account? Then create one <a routerLink="/signup">here</a>!
+        </p>
         <button type="submit">Login</button>
     </div>
 </form>
