--- a/indexcards-ui/src/styles.css
+++ b/indexcards-ui/src/styles.css
@@ -76,3 +76,23 @@ label {
     color: #E63946;
     text-align: left;
 }
+
+/* unvisited link */
+a:link {
+  color: #1D3557;
+}
+
+/* visited link */
+a:visited {
+  color: #1D3557;
+}
+
+/* mouse over link */
+a:hover {
+  color: #F1FAEE;
+}
+
+/* selected link */
+a:active {
+  color: #1D3557;
+}
