--- a/indexcards-ui/src/app/component/projects/all-projects/all-projects.component.html
+++ b/indexcards-ui/src/app/component/projects/all-projects/all-projects.component.html
@@ -1,1 +1,5 @@
-<p>all-projects works!</p>
+<div class="container">
+  <div *ngFor="let project of projects">
+    {{ project.name }}
+  </div>
+</div>
