--- a/indexcards-ui/src/app/component/projects/all-projects/all-projects.component.css
+++ b/indexcards-ui/src/app/component/projects/all-projects/all-projects.component.css
@@ -11,6 +11,7 @@
     padding: 5px;
 }
 
-.title {
-  text-align: left;
+.header-container {
+    display: flex;
+    justify-content: space-between;
 }
