--- a/indexcards-ui/src/app/component/projects/all-projects/all-projects.component.html
+++ b/indexcards-ui/src/app/component/projects/all-projects/all-projects.component.html
@@ -1,7 +1,12 @@
 <div class="container">
-    <h1 class="title">
-        Your Projects
-    </h1>
+    <div class="header-container">
+        <h1 class="title">
+            Your Projects
+        </h1>
+        <button routerLink="createProject">
+            Create Project
+        </button>
+    </div>
     <div *ngFor="let project of projects">
         <div class="project">
             <div class="projectName">{{ project.name }}</div>
