Service restructuring Get All Projects from User

--- a/indexcards-ui/src/app/component/projects/all-projects/all-projects.component.html
+++ b/indexcards-ui/src/app/component/projects/all-projects/all-projects.component.html
@@ -7,7 +7,7 @@
             Create Project
         </button>
     </div>
-    <div *ngFor="let project of projects">
+    <div *ngFor="let project of userProjectsResponse!.projectResponses">
         <div class="project">
             <div class="projectName">{{ project.name }}</div>
             {{ project.indexCardResponses.length }}
