--- a/indexcards-ui/src/app/component/projects/project/project.component.html
+++ b/indexcards-ui/src/app/component/projects/project/project.component.html
@@ -1,1 +1,7 @@
-<p>project works!</p>
+<div class="container">
+  <div class="header-container">
+    <h1 class="title">
+      {{ userProject.projectResponse.name }}
+    </h1>
+  </div>
+</div>
