Routing to create index card page

--- a/indexcards-ui/src/app/component/projects/project/project.component.html
+++ b/indexcards-ui/src/app/component/projects/project/project.component.html
@@ -3,5 +3,8 @@
     <h1 class="title">
       {{ userProject.projectResponse.name }}
     </h1>
+    <button (click)="onClickCreateIndexcardButton()">
+      Create Index Card
+    </button>
   </div>
 </div>
