--- a/indexcards-ui/src/app/component/projects/project/project.component.css
+++ b/indexcards-ui/src/app/component/projects/project/project.component.css
@@ -2,3 +2,16 @@
   display: flex;
   justify-content: space-between;
 }
+
+.indexcardContainer {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.indexcard {
+  background: #1D3557;
+  height: 100px;
+  margin: 10px;
+  padding: 5px;
+  border-radius: 10px;
+}
