Assess Index Card as GOOD through frontend

--- a/indexcards-ui/src/app/component/indexcard/indexcard-quiz/indexcard-quiz.component.html
+++ b/indexcards-ui/src/app/component/indexcard/indexcard-quiz/indexcard-quiz.component.html
@@ -10,6 +10,14 @@
       <div *ngIf="showAnswer">
         <h2>{{ getIndexCard()?.answer }}</h2>
       </div>
+      <div class="assessment-button-container">
+        <fa-icon
+          class="assessment-button"
+          [icon]="faCheck"
+          (click)="assessIndexCard('GOOD')"
+        >
+        </fa-icon>
+      </div>
     </div>
   </div>
 </div>
