--- a/indexcards-ui/src/app/component/indexcard/indexcard-quiz/indexcard-quiz.component.css
+++ b/indexcards-ui/src/app/component/indexcard/indexcard-quiz/indexcard-quiz.component.css
@@ -13,5 +13,12 @@
   border-radius: 10px;
 }
 
-.show-answer-button {
+.assessment-button-container {
+}
+
+.assessment-button {
+  position: absolute;
+  font-size: 2em;
+  padding-bottom: 30px;
+  bottom: 5px;
 }
