--- a/indexcards-ui/src/app/component/indexcard/indexcard-quiz/indexcard-quiz.component.css
+++ b/indexcards-ui/src/app/component/indexcard/indexcard-quiz/indexcard-quiz.component.css
@@ -1,6 +1,8 @@
 .indexcard-container {
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
   height: 100%;
   margin-bottom: 20px;
 }
@@ -8,25 +10,20 @@
 .indexcard {
   width: 50%;
   background: #1D3557;
-  height: 100%;
+  height: 80%;
   margin-bottom: 20px;
   border-radius: 10px;
 }
 
+
 .assessment-button-container {
-  display: flex;                  /* establish flex container */
-  flex-direction: row;            /* default value; can be omitted */
-  flex-wrap: nowrap;              /* default value; can be omitted */
+  height: 10%;
+  width: 50%;
+  display: flex;
   justify-content: space-between;
-  justify-items: baseline;
+  justify-items: center;
 }
 
 .assessment-button {
   font-size: 2em;
-  padding-bottom: 30px;
-  transform: translate(0%, 100%);
-}
-
-.assessment-left {
-  justify-content: left;
 }
