Started with new color scheme

--- a/indexcards-ui/src/app/component/common/header/header.component.css
+++ b/indexcards-ui/src/app/component/common/header/header.component.css
@@ -1,9 +1,10 @@
 .header {
-    background-color: #1D3557;
+    background-color: var(--deepPurple700);
     padding: 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: var(--deepPurple50);
 }
 
 fa-icon {
