--- a/indexcards-ui/src/styles.css
+++ b/indexcards-ui/src/styles.css
@@ -1,11 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
+:root {
+  /*https://m2.material.io/design/color/the-color-system.html#color-theme-creation*/
+  --darkgrey: #121212;
+  --deepPurple50: #EDE7F6;
+  --deepPurple100: #D1C4E9;
+  --deepPurple200: #B39DDB;
+  --deepPurple300: #9575CD;
+  --deepPurple400: #7E57C2;
+  --deepPurple500: #673AB7;
+  --deepPurple600: #5E35B1;
+  --deepPurple700: #512DA8;
+  --deepPurple800: #4527A0;
+  --deepPurple900: #311B92;
+  --deepPurpleA100: #B388FF;
+  --deepPurpleA200: #7C4DFF;
+  --deepPurpleA400: #651FFF;
+  --deepPurpleA700: #6200EA;
+}
+
 html {
     font-family: 'Montserrat', sans-serif;
-    background: #A8DADC;
     color: white;
     width: 100%;
-
+    background: var(--darkgrey);
 }
 app-root {
     display: flex;
@@ -27,15 +45,15 @@ button {
     font-family: 'Montserrat', sans-serif;
     padding: 4px;
     font-size: larger;
-    background-color: transparent;
+    border: none;
     border-radius: 5px;
-    border: 2px solid #F1FAEE;
+    background-color: var(--deepPurple200);
     color: white;
     transition: 0.1s;
 }
 
 button:hover {
-    background-color: #00000050
+   background-color: var(--deepPurple300);
 }
 
 input {
@@ -62,7 +80,6 @@ label {
 }
 
 .container {
-    background: #457B9D;
     border: 0 none;
     border-radius: 10px;
     padding: 20px 30px;
