--- a/indexcards-ui/src/app/component/auth/signup/signup.component.html
+++ b/indexcards-ui/src/app/component/auth/signup/signup.component.html
@@ -1,24 +1,35 @@
-<form #signup="ngForm" (ngSubmit)="createAccount(signup)">
-    <div class="container">
-        <span class="p-float-label">
-          <input pInputText id="username" [(ngModel)]="username" />
-          <label htmlFor="username">Username</label>
-        </span>
-      <span class="p-float-label">
-          <input pInputText id="firstname" [(ngModel)]="firstname" />
-          <label htmlFor="firstname">Firstname</label>
-        </span>
-        <span class="p-float-label">
-          <input pInputText id="surname" [(ngModel)]="surname" />
-          <label htmlFor="surname">Lastname</label>
-        </span>
-        <label for="password">
-            Password
-        </label>
-        <p-password [(ngModel)]="password" [feedback]="true" [toggleMask]="true" id="password"></p-password>
-        <p>
-            Already have an Account? Then login <a routerLink="/login">here</a>!
-        </p>
-        <button type="submit">Create an account</button>
+<form [formGroup]="signUpFormGroup" (submit)="createAccount()">
+  <div class="container center">
+    <div class="form-input form-group">
+      <label for="username">
+        Username
+      </label><br>
+      <input pInputText formControlName="username" name="username" id="username" type="text"><br>
     </div>
+    <div class="form-input">
+      <label for="firstname">
+        Firstname
+      </label><br>
+      <input pInputText formControlName="firstname" name="firstname" id="firstname" type="text"><br>
+    </div>
+    <div class="form-input">
+      <label for="surname">
+        Lastname
+      </label><br>
+      <input pInputText formControlName="surname" id="surname" type="text"><br>
+    </div>
+    <div class="form-input">
+      <label for="password">
+        Password
+      </label><br>
+      <p-password [style]="{'width':'100%'}" [inputStyle]="{'width':'100%'}" formControlName="password" [feedback]="true"
+        [toggleMask]="true" id="password"></p-password><br>
+    </div>
+    <p>
+        Already have an Account? Then login <a routerLink="/login">here</a>!
+    </p>
+    <div class="center">
+      <button pButton type="submit">Create an account</button>
+    </div>
+  </div>
 </form>
