--- a/indexcards-ui/src/styles.css
+++ b/indexcards-ui/src/styles.css
@@ -2,7 +2,7 @@
 
 :root {
   /*https://m2.material.io/design/color/the-color-system.html#color-theme-creation*/
-  --darkgrey: #121212;
+  --darkgrey: #232323;
   --deepPurple50: #EDE7F6;
   --deepPurple100: #D1C4E9;
   --deepPurple200: #B39DDB;
@@ -39,34 +39,7 @@ app-root {
 .center{
     display: flex;
     justify-content: center;
-}
-
-button {
-    font-family: 'Montserrat', sans-serif;
-    padding: 4px;
-    font-size: larger;
-    border: none;
-    border-radius: 5px;
-    background-color: var(--deepPurple200);
-    color: white;
-    transition: 0.1s;
-}
-
-button:hover {
-   background-color: var(--deepPurple300);
-}
-
-input {
-    padding: 15px;
-    border-radius: 5px;
-    border: 3px solid #F1FAEE;
-    margin-bottom: 10px;
-    width: 100%;
-    box-sizing: border-box;
-    font-family: montserrat, serif;
-    color: #000000;
-    font-size: larger;
-    background-color: #fbfdf6;
+    flex-direction: column;
 }
 
 textarea {
@@ -87,35 +60,32 @@ label {
     width: 80%;
     margin: 30px 10% 0 10%;
     text-align: center;
-
-    /*stacking fieldsets above each other*/
-    position: relative;
 }
 
 .error {
-    font-size: x-large;
+    font-size: large;
     color: #E63946;
     text-align: left;
 }
 
 /* unvisited link */
 a:link {
-  color: #1D3557;
+  color: var(--deepPurple200);
 }
 
 /* visited link */
 a:visited {
-  color: #1D3557;
+  color: var(--deepPurple300);
 }
 
 /* mouse over link */
 a:hover {
-  color: #F1FAEE;
+  color: var(--deepPurple50);
 }
 
 /* selected link */
 a:active {
-  color: #1D3557;
+  color: var(--deepPurple50);
 }
 
 .title {
