Switched to PrimeNg Toast for Notifications in Auth

--- a/indexcards-ui/src/app/app.component.html
+++ b/indexcards-ui/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-header></app-header>
+<app-header>
+</app-header>
 
+<p-toast position="top-right" key="tr"></p-toast>
 <simple-notifications></simple-notifications>
 <router-outlet></router-outlet>
