--- a/indexcards-ui/src/app/component/auth/login/login.component.html
+++ b/indexcards-ui/src/app/component/auth/login/login.component.html
@@ -12,7 +12,7 @@
           Password
         </label><br>
         <p-password [style]="{'width':'100%'}" [inputStyle]="{'width':'100%'}" formControlName="password"
-          [feedback]="true" [toggleMask]="true" id="password"></p-password>
+          [feedback]="false" [toggleMask]="true" id="password"></p-password>
       </div>
       <p>
         Don't have an Account? Then create one <a routerLink="/signup">here</a>!
