--- a/indexcards-ui/src/app/component/projects/all-projects/all-projects.component.css
+++ b/indexcards-ui/src/app/component/projects/all-projects/all-projects.component.css
@@ -1,9 +1,10 @@
 .project {
   background-color: var(--deepPurple300);
-  color: black;
-  margin: 5px 0 5px 0;
-  font-size: larger;
+  color: white;
+  margin: 10px 0 10px 0;
+  font-size: 1.875em;
   border-radius: 10px;
+  padding: 5px;
 }
 
 .projectName {
@@ -12,13 +13,13 @@
 }
 
 .header-container {
-  color: var(--deepPurple100);
   display: flex;
   justify-content: space-between;
   padding: 5px;
 }
 
 .header-icon {
+  color: var(--deepPurple100);
   font-size: 2.5em;
   display: flex;
   align-items: center;
