--- a/indexcards-ui/src/app/component/projects/create-project/create-project.component.css
+++ b/indexcards-ui/src/app/component/projects/create-project/create-project.component.css
@@ -2,3 +2,14 @@ button {
   margin-top: 10px;
   width: 100%;
 }
+
+
+input {
+  width: 100%;
+}
+
+.p-button {
+  width: 100%;
+  display: block;
+  background-color: var(--deepPurpleA100);
+}
