--- a/indexcards-ui/src/app/component/projects/create-project/create-project.component.html
+++ b/indexcards-ui/src/app/component/projects/create-project/create-project.component.html
@@ -1,12 +1,14 @@
-<form #project="ngForm" (ngSubmit)="createProject(project)">
-    <div class="container">
-        <h1 class="title">
-          Create a new Project
-        </h1>
-        <label for="name">
-            Project Name
-        </label>
-        <input #name="ngModel" name="name" id="name" type="text" ngModel required>
-        <button type="submit">Create Project</button>
+<form [formGroup]="createProjectFormGroup" (ngSubmit)="createProject()">
+  <div class="container">
+    <h1 class="title">
+      Create a new Project
+    </h1>
+    <div class="form-input form-group">
+      <label for="name">
+        Project name
+      </label><br>
+      <input pInputText formControlName="name" name="name" id="name" type="text"><br>
     </div>
+    <button pButton type="submit">Create Project</button>
+  </div>
 </form>
