--- a/indexcards-ui/src/app/component/projects/project/project.component.css
+++ b/indexcards-ui/src/app/component/projects/project/project.component.css
@@ -8,10 +8,23 @@
   grid-template-columns: repeat(2, 1fr);
 }
 
+.header-icon-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .indexcard {
-  background: #1D3557;
+  background: var(--deepPurple300);
   height: 100px;
   margin: 10px;
   padding: 5px;
   border-radius: 10px;
+}
+
+.header-icon {
+  color: var(--deepPurple100);
+  font-size: 2.5em;
+  display: flex;
+  align-items: center;
+  margin: 5px;
 }
