--- a/indexcards-ui/src/app/component/common/header/header.component.html
+++ b/indexcards-ui/src/app/component/common/header/header.component.html
@@ -2,5 +2,6 @@
   <h1>
     Indexcards
   </h1>
-  <i *ngIf="isLoggedIn()" class="pi pi-sign-out header-icon" pTooltip="Logout" (click)="logout()"></i>
+  <i *ngIf="isLoggedIn()" class="pi pi-sign-out header-icon" tooltipPosition="left" pTooltip="Logout"
+     (click)="logout()"></i>
 </div>
