--- a/indexcards-ui/src/app/component/auth/login/login.component.html
+++ b/indexcards-ui/src/app/component/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="loginFormGroup" (ngSubmit)="makeLogin()">
   <div class="container">
-    <div class="container center">
+    <div class="center">
       <div class="form-input form-group">
         <label for="username">
           Username
