--- a/indexcards-ui/src/styles.css
+++ b/indexcards-ui/src/styles.css
@@ -62,6 +62,13 @@ label {
     text-align: center;
 }
 
+@media (max-width: 480px) {
+  .container {
+    margin: 0;
+    width: 100%;
+  }
+}
+
 .error {
     font-size: large;
     color: #E63946;
