feat: better footer positioning

--- a/indexcards-ui/src/styles.css
+++ b/indexcards-ui/src/styles.css
@@ -65,6 +65,7 @@ label {
     width: 80%;
     margin: 30px 10% 0 10%;
     text-align: center;
+    min-height: 70vh;
 }
 
 @media (max-width: 480px) {
