feat: changed buttons at quiz
Buttons are no longer just icons

--- a/indexcards-ui/src/app/component/indexcard/indexcard-quiz/indexcard-quiz.component.css
+++ b/indexcards-ui/src/app/component/indexcard/indexcard-quiz/indexcard-quiz.component.css
@@ -43,11 +43,12 @@
   height: 10%;
   width: 50%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   justify-items: center;
   color: var(--deepPurpleA100);
 }
 
 .assessment-button {
-  font-size: 2em;
+  width: 100%;
+  margin: 3px;
 }
