--- a/indexcards-ui/src/app/component/projects/project/project.component.html
+++ b/indexcards-ui/src/app/component/projects/project/project.component.html
@@ -4,11 +4,11 @@
       {{ userProject?.projectResponse?.name }}
     </h1>
     <div class="header-icon-container">
+      <p-button pTooltip="Repeate" (click)="onClickQuizButton()">Spaced Repetition</p-button>
       <i class="pi pi-plus header-icon" pTooltip="Create a new index card" (click)="onClickCreateIndexcardButton()"></i>
-      <i class="pi pi-check-square header-icon" pTooltip="Start a quiz" (click)="onClickQuizButton()"></i>
     </div>
   </div>
-  <div class="indexcardContainer">
+  <div class="indexcard-container">
     <div *ngFor="let indexcard of userProject?.projectResponse?.indexCardResponses">
       <div class="indexcard {{ indexcard.assessment.toString() | lowercase }}">
         <h2>
