feat: chart displayed after finishing quiz
Chart of the current Assessment of all cards is displayed

--- a/indexcards-ui/src/app/component/indexcard/indexcard-quiz-stat/indexcard-quiz-stat.component.html
+++ b/indexcards-ui/src/app/component/indexcard/indexcard-quiz-stat/indexcard-quiz-stat.component.html
@@ -1,1 +1,8 @@
-<p>indexcard-quiz-stat works!</p>
+
+<div class="container">
+<div class="chart-container">
+  <div>
+  <p-chart type="pie" [data]="data" [options]="chartOptions"></p-chart>
+  </div>
+</div>
+</div>
