--- a/indexcards-ui/src/app/component/indexcard/indexcard-quiz-stat/indexcard-quiz-stat.component.html
+++ b/indexcards-ui/src/app/component/indexcard/indexcard-quiz-stat/indexcard-quiz-stat.component.html
@@ -1,8 +1,7 @@
 
 <div class="container">
-<div class="chart-container">
-  <div>
-  <p-chart type="pie" [data]="data" [options]="chartOptions"></p-chart>
+  <h1>Current Stats for {{ userProject?.projectResponse?.name }}</h1>
+  <div class="chart-container">
+    <p-chart type="pie" [data]="data" [options]="chartOptions"></p-chart>
   </div>
-</div>
 </div>
