feat: buttons on quiz stat
Go back to project and spaced repetition button

--- a/indexcards-ui/src/app/component/indexcard/indexcard-quiz-stat/indexcard-quiz-stat.component.html
+++ b/indexcards-ui/src/app/component/indexcard/indexcard-quiz-stat/indexcard-quiz-stat.component.html
@@ -4,4 +4,8 @@
   <div class="chart-container">
     <p-chart type="pie" [data]="data" [options]="chartOptions"></p-chart>
   </div>
+  <div class="footer-container">
+    <p-button pTooltip="Go back to project" (click)="onClickToProject()">Back to Project</p-button>
+    <p-button pTooltip="Repeate" (click)="onClickQuizButton()">Spaced Repetition</p-button>
+  </div>
 </div>
