--- a/indexcards-ui/src/app/component/indexcard/indexcard-quiz-stat/indexcard-quiz-stat.component.css
+++ b/indexcards-ui/src/app/component/indexcard/indexcard-quiz-stat/indexcard-quiz-stat.component.css
@@ -3,4 +3,16 @@
   display:block;
   margin-right:auto;
   margin-left:auto;
+  margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 768px) {
+  .chart-container {
+    width: 100%;
+  }
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-evenly;
 }
