style: cursor to point on clickable items

--- a/indexcards-ui/src/app/component/indexcard/indexcard-quiz-stat/indexcard-quiz-stat.component.html
+++ b/indexcards-ui/src/app/component/indexcard/indexcard-quiz-stat/indexcard-quiz-stat.component.html
@@ -6,6 +6,6 @@
   </div>
   <div class="footer-container">
     <p-button pTooltip="Go back to project" (click)="onClickToProject()">Back to Project</p-button>
-    <p-button pTooltip="Repeate" (click)="onClickQuizButton()">Spaced Repetition</p-button>
+    <p-button pTooltip="Repeat" (click)="onClickQuizButton()">Spaced Repetition</p-button>
   </div>
 </div>
