--- a/indexcards-ui/src/app/component/common/header/header.component.html
+++ b/indexcards-ui/src/app/component/common/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <h1>
+  <h1 (click)="onClickHome()">
     Indexcards
   </h1>
   <i *ngIf="isLoggedIn()" class="pi pi-sign-out header-icon" tooltipPosition="left" pTooltip="Logout"
